<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">


    <Button
        android:id="@+id/btnDownloadFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:onClick="onClick"
        android:text="@string/download_file"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnSaveBitmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:onClick="onClick"
        android:text="@string/save_bitmap"
        android:textAllCaps="false"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnAddImageToAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:onClick="onClick"
        android:text="@string/add_image_to_album"
        android:textAllCaps="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnPickFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:onClick="onClick"
        android:text="@string/pick_file"
        android:textAllCaps="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnWriteRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:onClick="onClick"
        android:text="@string/write_request"
        android:textAllCaps="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnManageExternalStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:onClick="onClick"
        android:text="@string/manage_external_storage"
        android:textAllCaps="false"
        android:visibility="gone" />

</LinearLayout>